[gd_scene load_steps=3 format=3 uid="uid://dw4sn6e0bdrnj"]

[ext_resource type="Script" path="res://data_excluder.gd" id="1_mmiau"]
[ext_resource type="FontFile" uid="uid://bbvqbvo8bcb8f" path="res://Xolonium-Regular.ttf" id="2_2ifcb"]

[node name="DataExcluder" type="CanvasLayer"]
script = ExtResource("1_mmiau")

[node name="Popup" type="ColorRect" parent="."]
offset_left = 256.0
offset_top = 128.0
offset_right = 768.0
offset_bottom = 384.0
color = Color(0.0901961, 0.137255, 0.223529, 1)

[node name="Label" type="Label" parent="Popup"]
layout_mode = 0
offset_left = 81.0
offset_top = 35.0
offset_right = 431.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("2_2ifcb")
theme_override_font_sizes/font_size = 28
text = "ESPAÇO GEOMÉTRICO"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Popup"]
modulate = Color(0.340374, 0.680577, 0, 1)
layout_mode = 0
offset_left = 121.0
offset_top = 158.0
offset_right = 211.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("2_2ifcb")
theme_override_font_sizes/font_size = 30
text = "Sim"

[node name="Button2" type="Button" parent="Popup"]
modulate = Color(0.340374, 0.680577, 0, 1)
layout_mode = 0
offset_left = 301.0
offset_top = 158.0
offset_right = 391.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("2_2ifcb")
theme_override_font_sizes/font_size = 30
text = "Não"

[node name="Button3" type="Button" parent="Popup"]
visible = false
modulate = Color(0.340374, 0.680577, 0, 1)
layout_mode = 0
offset_left = 211.0
offset_top = 158.0
offset_right = 301.0
offset_bottom = 233.0
theme_override_fonts/font = ExtResource("2_2ifcb")
theme_override_font_sizes/font_size = 30
text = "OK"

[node name="RichTextLabel" type="RichTextLabel" parent="Popup"]
layout_mode = 0
offset_left = 10.0
offset_top = 92.0
offset_right = 478.0
offset_bottom = 142.0
theme_override_fonts/normal_font = ExtResource("2_2ifcb")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]Tem certeza que deseja excluir seu progresso? Não será possível recuperá-lo.[/center]"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Popup"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 92.0
offset_right = 478.0
offset_bottom = 142.0
theme_override_fonts/normal_font = ExtResource("2_2ifcb")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]Dados excluídos com sucesso.[/center]"
fit_content = true
scroll_active = false

[connection signal="pressed" from="Popup/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Popup/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Popup/Button3" to="." method="_on_button_3_pressed"]
